# app/controllers/api/transactions_controller.rb
@@ -3,22 +3,18 @@ class Api::TransactionsController < ApplicationController
 
   # GET /api/transactions
   def index
-    transactions = Transaction.includes(:store).order(date: :desc)
+    transactions       = Transaction.includes(:store).order(date: :desc)
+    transactions       = transactions.where(store_id: transaction_params[:store_id]) if transaction_params[:store_id].present?
     pagy, transactions = pagy(transactions)
-    transactions = transactions.where(store_id: params[:store_id]) if params[:store_id].present?
 
-    render json: {
-      transactions: transactions.as_json(
-        only:    [ :id, :date, :transaction_type, :value, :cpf, :card, :hour ],
-        include: { store: { only: [ :name, :owner ] } }
-      ),
-      pagination:   pagy_metadata(pagy)
-    }
+    render json: TransactionSerializer.new(transactions, include: [ :store ])
+                                      .serializable_hash
+                                      .merge(pagination: pagy_metadata(pagy))
   end
 
   # GET /api/transactions/:id
   def show
-    render json: @transaction
+    render json: TransactionSerializer.new(@transaction, include: [ :store ]).serializable_hash
   end
 
   private
@@ -27,5 +23,9 @@ class Api::TransactionsController < ApplicationController
     @transaction = Transaction.find(params[:id])
   rescue ActiveRecord::RecordNotFound
     render json: { error: "Transação não encontrada" }, status: :not_found
+  end
+
+  def transaction_params
+    params.permit(:store_id, :date, :value, :cpf, :card, :hour)
   end
 end
