# app/serializers/store_serializer.rb
@@ -1,0 +1,5 @@
+class StoreSerializer
+  include JSONAPI::Serializer
+
+  attributes :name, :owner
+end
